--- a/views/main_layout.html
+++ b/views/main_layout.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <title>[[template "title" .]]</title>
+
+    [[template "page_css" .]]
   </head>
-  <body class="d-flex flex-column h-100">
+  <body>
     <!-- Begin page content -->
-    <main role="main" class="flex-shrink-0">
+    <main role="main">
       <div class="container">
         [[template "body" .]]
       </div>
