--- a/static/home.css
+++ b/static/home.css
@@ -1,13 +1,6 @@
 main {
   text-align: center;
 }
-#video-container {
-  display: block;
-  width: 200px;
-  height: 200px;
-  margin: auto;
-}
-video {
-  width: 100%;
-  height: 100%;
+#image-form {
+  display: none;
 }
