--- a/views/home.html
+++ b/views/home.html
@@ -1,14 +1,20 @@
 [[define "title"]]Open OCR Reader[[end]]
 
-[[define "body"]]
-<h1 class="mt-5">Click on the page to capture an image</h1>
 
-<div id="video-container">
-<video id="video" autoplay></video>
+[[define "body"]]
+<div id="nonJavascriptContent" style="display:block">
+<h1>You need javascript to view this page</h1>
 </div>
 
+<div id="javascriptContent" style="display:none">
+<h1>Click on the page to upload or capture an image</h1>
 
-<canvas id="canvas"></canvas>
+<form id="image-form" action="/upload">
+<label for="image-upload" class="image-upload-btn">
+</label>
+<input id="image-upload" type="file" accept="image/*" capture>
+</form>
+</div>
 [[ end ]]
 
 [[define "page_javascript"]]
