--- a/views/home.html
+++ b/views/home.html
@@ -9,10 +9,10 @@
 <div id="javascriptContent" style="display:none">
 <h1>Click on the page to upload or capture an image</h1>
 
-<form id="image-form" action="/upload">
+<form id="image-form" enctype="multipart/form-data" action="/upload" method="POST">
 <label for="image-upload" class="image-upload-btn">
 </label>
-<input id="image-upload" type="file" accept="image/*" capture>
+<input id="image-upload" name="image-file" type="file" accept="image/*" capture>
 </form>
 </div>
 [[ end ]]
