move camera buttons above canvas

--- a/views/home.html
+++ b/views/home.html
@@ -22,12 +22,13 @@
 
 
 <div id="desktop_canvas">
+    <div class="camera_buttons">
+        <button id="start-camera">Start Camera</button>
+        <button id="click-photo">Click Photo</button>
+      </div>
     <video id="video" width="320" height="240" autoplay></video>
+    <br>
     <canvas id="canvas" width="1200" height="1200"></canvas>
-    <div>
-      <button id="start-camera">Start Camera</button>
-      <button id="click-photo">Click Photo</button>
-    </div>
 
     <form id="myAwesomeForm" class="desktop_from" method="post" action="/upload" >
         <input type="text" id="filename" name="filename" /> <!-- Filename -->
