change desktop form ID

--- a/views/home.html
+++ b/views/home.html
@@ -30,7 +30,7 @@
     <br>
     <canvas id="canvas" width="1200" height="1200"></canvas>
 
-    <form id="myAwesomeForm" class="desktop_from" method="post" action="/upload" >
+    <form id="desktop_from" class="desktop_from" method="post" action="/upload" >
         <input type="text" id="filename" name="filename" /> <!-- Filename -->
         <input type="submit" id="submitButton" name="submitButton" /> <!-- Submit -->
     </form>
